@@ -2,6 +2,7 @@
 # A minimal config file to get you started.
 # - see also the docs/example folder.
 
+HTMLSTYLE overlib
 WIDTH 800
 HEIGHT 600
 
